# activation_keygen

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt
client_application/: app.py
license_server/: main.py
src/client_application/: activation_key.txt  client.py
src/license_server/: license_server.py  lincese_server.py
